--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
       <!--Your web app's Firebase configuration
          Add here
         Initialize Firebase-->
-
+ 
       <link rel="stylesheet" type="text/css" href="style.css"/>
+     <script src="Food.js"></script>
     </head>
     <body>
       <script src="sketch.js"></script>
